k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demoapp
  labels:
    name: demoapp
    app: demoapp
