k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-service
  namespace: demoapp
  labels:
    app: demoapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: demoapp
